# sistem-cerdas-yolo-bytrack

./: .env.example  .gitignore  Bab4_Hasil_dan_Pembahasan.tex  Bab5_Kesimpulan_dan_Saran.tex  README.md  benchmark_results.json  docker-compose.db.yml  docker-compose.yml  pyproject.toml  threshold_results.json
.github/: copilot-instructions.md
benchmark/: benchmark_results.json  resource_results.json  streaming_results.json  system_resource_results.json
config/: settings.py
docs/: BAB_IV_Hasil_Pembahasan.tex  WORKFLOW.md  bab4_draft.tex
grafana/dashboards/: sentinel_dashboard.json
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: local-postgres.yaml  supabase.yaml
scripts/: init-db.ps1  run_pipeline.ps1  run_pipeline.sh  setup_kafka_topics.ps1  setup_kafka_topics.sh  spark_submit.ps1  start_all.ps1
spark/: stream_processor.py
sql/: 001_create_dimensions.sql  002_create_facts.sql  003_create_views.sql
src/detector/: __init__.py  model.py  tracker.py  violation.py
src/evaluation/: __init__.py  evaluate_mot.py  gt_annotator.py  mot_exporter.py
src/pipeline/: debug_display.py  main.py
src/streaming/: consumer.py  producer.py
src/utils/: schemas.py
tests/: benchmark_pipeline.py  benchmark_streaming.py  resource_benchmark.py  system_resource_benchmark.py  test_detector.py
