[project]
name = "itera-smart-sentinel"
version = "1.0.0"
description = "ITERA Smart Sentinel - Sistem Deteksi & Analitik Pelanggaran Helm Real-time"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ultralytics>=8.3.0",
    "opencv-python-headless>=4.9.0",
    "numpy>=1.26.0",
    "supervision>=0.25.0",
    "confluent-kafka>=2.6.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "motmetrics>=1.4.0",
    "scipy>=1.11.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
